--- a/Python/ImageIO/Intro_IP.ipynb
+++ b/Python/ImageIO/Intro_IP.ipynb
@@ -19,6 +19,11 @@
     }
    ],
    "source": [
+    "##Image Processing Introduction with ImageIO\n",
+    "##\n",
+    "##Author: jecs89\n",
+    "##Date: 23-09-2019\n",
+    "\n",
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
@@ -663,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
